# TMS-Finance-App

./: .gitignore
.github/workflows/: build-apk.yml
.serena/: project.yml
.superpowers/brainstorm/89549-1775650115/state/: server-stopped
.superpowers/brainstorm/93557-1775652119/content/: architecture-v2.html  architecture.html  bank-integrations.html  screens-overview.html
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro  tms-release.jks
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
backend/: .env.example  install.sh  pyproject.toml  run.sh
backend/src/tms/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/src/tms/api/: __init__.py  accounts.py  ai_categorize.py  analytics.py  budgets.py  categories.py  export.py  loans.py  notifications.py  recurring.py  sync.py  transactions.py
backend/src/tms/connectors/: base.py  enbd_api.py  enbd_scraper.py  fints_connector.py  lean.py  revolut.py
backend/src/tms/services/: categorizer.py  currency.py  sync_engine.py
backend/tests/: conftest.py  test_api_accounts.py  test_api_categories.py  test_api_loans.py  test_api_notifications.py  test_api_sync.py  test_api_transactions.py  test_categorizer.py  test_currency.py  test_fints_connector.py  test_integration.py  test_lean_connector.py  test_models.py  test_revolut_connector.py  test_seed.py  test_sync_engine.py
docs/superpowers/plans/: 2026-04-08-tms-backend.md
docs/superpowers/specs/: 2026-04-08-tms-banking-design.md
(+48 files in other folders)
